add_subdirectory(disjoint_set_union)
add_subdirectory(fenwick)
add_subdirectory(graph)
add_subdirectory(minimum_queue)
add_subdirectory(minimum_stack)
add_subdirectory(mo)
add_subdirectory(segment_tree)
add_subdirectory(sparse_table)
add_subdirectory(sqrt_decomposition)
add_subdirectory(sqrt_tree)
add_subdirectory(treap)

